[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Adventurer.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Animations/ScrollingMenuBackground.gd" type="Script" id=3]
[ext_resource path="res://Textures/AshRain_1.png" type="Texture" id=4]
[ext_resource path="res://Fonts/LastPriestess_quick.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/Main_Menu_Wave.tres" type="Material" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float scroll_speed;
void fragment() {
	vec2 shifteduv = UV;
	shifteduv.y -= TIME * scroll_speed;
	vec4 col = texture(TEXTURE,shifteduv);
	COLOR = col;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = null

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 4 )
stretch_mode = 2
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 95.0
margin_top = 37.0
margin_right = 224.0
margin_bottom = 143.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 129.0
margin_bottom = 16.0

[node name="Title Text" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
material = ExtResource( 6 )
margin_right = 129.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Gems through Ash"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 129.0
margin_bottom = 106.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 29.0
margin_right = 100.0
margin_bottom = 86.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 71.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 71.0
margin_bottom = 14.0

[node name="Arrow" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 6.0
margin_bottom = 14.0
rect_min_size = Vector2( 6, 0 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="NewGame" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 10.0
margin_right = 71.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "New Game"

[node name="CenterContainer5" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 71.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer5"]
margin_right = 71.0
margin_bottom = 14.0

[node name="Arrow" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer5/HBoxContainer"]
margin_right = 6.0
margin_bottom = 14.0
rect_min_size = Vector2( 6, 0 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="Continue" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer5/HBoxContainer"]
margin_left = 10.0
margin_right = 71.0
margin_bottom = 14.0
rect_min_size = Vector2( 61, 0 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Continue"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 36.0
margin_right = 71.0
margin_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 71.0
margin_bottom = 14.0

[node name="Arrow" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 6.0
margin_bottom = 14.0
rect_min_size = Vector2( 6, 0 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="Options" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 10.0
margin_right = 71.0
margin_bottom = 14.0
rect_min_size = Vector2( 61, 0 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Options"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 54.0
margin_right = 71.0
margin_bottom = 68.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_right = 71.0
margin_bottom = 14.0

[node name="Arrow" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 6.0
margin_bottom = 14.0
rect_min_size = Vector2( 6, 0 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="Credits" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 10.0
margin_right = 71.0
margin_bottom = 14.0
rect_min_size = Vector2( 61, 0 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Credits"

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 72.0
margin_right = 71.0
margin_bottom = 86.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4"]
margin_right = 71.0
margin_bottom = 14.0

[node name="Arrow" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 6.0
margin_bottom = 14.0
rect_min_size = Vector2( 6, 0 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="Exit" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_left = 10.0
margin_right = 71.0
margin_bottom = 14.0
rect_min_size = Vector2( 61, 0 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Exit"
